--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,17 +1,33 @@
-<!--Header-->
-
-<nav class="navbar">
-  <div class="navbar-logo">
-    <img src="assets/logo.png" alt="My App Logo" />
-  </div>
-  <ul class="navbar-links">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/about">Services</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Blog</a></li>
-  </ul>
-  <div class="navbar-actions">
-    <!-- Add login/logout buttons or user-related actions here -->
+<!-- app.component.html -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">MyWebsite</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/services">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
