--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -31,3 +31,34 @@
     </div>
   </div>
 </nav>
+<div class="container-fluid p-0">
+  <!-- Section 1 -->
+  <section
+    class="section-1 d-flex align-items-center justify-content-center text-white"
+  >
+    <div class="container text-center">
+      <h1 class="display-4">Section 1</h1>
+      <p class="lead">This is the first big section.</p>
+    </div>
+  </section>
+
+  <!-- Section 2 -->
+  <section
+    class="section-2 d-flex align-items-center justify-content-center text-white"
+  >
+    <div class="container text-center">
+      <h1 class="display-4">Section 2</h1>
+      <p class="lead">This is the second big section.</p>
+    </div>
+  </section>
+
+  <!-- Section 3 -->
+  <section
+    class="section-3 d-flex align-items-center justify-content-center text-white"
+  >
+    <div class="container text-center">
+      <h1 class="display-4">Section 3</h1>
+      <p class="lead">This is the third big section.</p>
+    </div>
+  </section>
+</div>
