--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,54 +1,39 @@
 <!-- app.component.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <div id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/"
-            >About</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/about">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/services">Work</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact">Contact</a>
-        </li>
-      </ul>
+<div class="container-fluid p-0">
+  <div class="row">
+    <div class="col-6"></div>
+    <div class="col-6">
+      <div class="container-fluid p-0">
+        <!-- Section 1 -->
+        <section
+          class="section-1 d-flex align-items-center justify-content-center text-white"
+        >
+          <div class="container text-center">
+            <h1 class="display-4">Section 1</h1>
+            <p class="lead">This is the first big section.</p>
+          </div>
+        </section>
+
+        <!-- Section 2 -->
+        <section
+          class="section-2 d-flex align-items-center justify-content-center text-white"
+        >
+          <div class="container text-center">
+            <h1 class="display-4">Section 2</h1>
+            <p class="lead">This is the second big section.</p>
+          </div>
+        </section>
+
+        <!-- Section 3 -->
+        <section
+          class="section-3 d-flex align-items-center justify-content-center text-white"
+        >
+          <div class="container text-center">
+            <h1 class="display-4">Section 3</h1>
+            <p class="lead">This is the third big section.</p>
+          </div>
+        </section>
+      </div>
     </div>
   </div>
-</nav>
-<div class="container-fluid p-0">
-  <!-- Section 1 -->
-  <section
-    class="section-1 d-flex align-items-center justify-content-center text-white"
-  >
-    <div class="container text-center">
-      <h1 class="display-4">Section 1</h1>
-      <p class="lead">This is the first big section.</p>
-    </div>
-  </section>
-
-  <!-- Section 2 -->
-  <section
-    class="section-2 d-flex align-items-center justify-content-center text-white"
-  >
-    <div class="container text-center">
-      <h1 class="display-4">Section 2</h1>
-      <p class="lead">This is the second big section.</p>
-    </div>
-  </section>
-
-  <!-- Section 3 -->
-  <section
-    class="section-3 d-flex align-items-center justify-content-center text-white"
-  >
-    <div class="container text-center">
-      <h1 class="display-4">Section 3</h1>
-      <p class="lead">This is the third big section.</p>
-    </div>
-  </section>
 </div>
