--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,25 +1,34 @@
 <!-- app.component.html -->
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-3"></div>
     <!-- Fixed Left Column -->
-    <div class="col-md-6" id="fixed-column">
-      <div class="fixed-content">
-        <h2>Fixed Column</h2>
-        <p>This column remains fixed as you scroll the other column.</p>
+    <div class="col-md-3">
+      <div class="fixed-content mt-5">
+        <h1>Samuel Browne</h1>
+        <h3>Applications Developer</h3>
+        <p>I build websites and games</p>
+        <nav>
+          <ul>
+            <li><a>About</a></li>
+            <li><a>Experience</a></li>
+            <li><a>Projects</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
 
     <!-- Scrollable Right Column -->
-    <div class="col-md-6 offset-md-6" id="scrollable-column">
+    <div class="col-md-3 mt-5">
       <div class="scrollable-content">
-        <h2>Scrollable Column</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        <!-- Repeat or add more content to make this column scrollable -->
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>
+          I have been working for the Insurance Commission of Western Australia
+          (ICWA) developing web applications to help improve business processes.
+        </p>
         <!-- Add more content to enable scrolling -->
       </div>
     </div>
+
+    <div class="col-md-3"></div>
   </div>
 </div>
