--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -27,6 +27,25 @@
         </p>
         <!-- Add more content to enable scrolling -->
       </div>
+      <div>
+        <!--Previous jobs-->
+        <ol>
+          <li>
+            <div>
+              <div></div>
+              <div>
+                <h3>
+                  Applications Developer - Insurance Commission of Western
+                  Australia
+                </h3>
+              </div>
+            </div>
+          </li>
+        </ol>
+      </div>
+      <footer>
+        Designed by Samuel Browne. Built with Angular and Bootstrap
+      </footer>
     </div>
 
     <div class="col-md-3"></div>
