--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -32,12 +32,16 @@
         <ol>
           <li>
             <div>
-              <div></div>
+              <div>2021 - Present</div>
               <div>
                 <h3>
                   Applications Developer - Insurance Commission of Western
                   Australia
                 </h3>
+                <div>
+                  <div>Angular</div>
+                  <div>C#</div>
+                </div>
               </div>
             </div>
           </li>
