--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,57 +1,54 @@
 <!-- app.component.html -->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3"></div>
+    <div class="col-md-2"></div>
     <!-- Fixed Left Column -->
-    <div class="col-md-3">
+    <div class="col-md-4">
       <div class="fixed-content mt-5">
         <h1>Samuel Browne</h1>
         <h3>Applications Developer</h3>
         <p>I build websites and games</p>
-        <nav>
-          <ul>
-            <li><a>About</a></li>
-            <li><a>Experience</a></li>
-            <li><a>Projects</a></li>
-          </ul>
-        </nav>
       </div>
+      <nav>
+        <ul>
+          <li>
+            <a>About</a>
+          </li>
+          <li>
+            <a>Experience</a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <!-- Scrollable Right Column -->
-    <div class="col-md-3 mt-5">
+    <div class="col-md-4 mt-5">
       <div class="scrollable-content">
         <p>
-          I have been working for the Insurance Commission of Western Australia
-          (ICWA) developing web applications to help improve business processes.
+          I have been working for the
+          <a href="https://www.icwa.wa.gov.au/"
+            >Insurance Commission of Western Australia (ICWA)</a
+          >
+          developing web applications.
         </p>
         <!-- Add more content to enable scrolling -->
       </div>
       <div>
         <!--Previous jobs-->
-        <ol>
-          <li>
-            <div>
-              <div>2021 - Present</div>
-              <div>
-                <h3>
-                  Applications Developer - Insurance Commission of Western
-                  Australia
-                </h3>
-                <div>
-                  <div>Angular</div>
-                  <div>C#</div>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ol>
+        <div>
+          <div>2021 - Present</div>
+          <div>
+            <h5>
+              Applications Developer - Insurance Commission of Western Australia
+            </h5>
+          </div>
+        </div>
       </div>
       <footer>
         Designed by Samuel Browne. Built with Angular and Bootstrap
       </footer>
     </div>
 
-    <div class="col-md-3"></div>
+    <div class="col-md-2"></div>
   </div>
 </div>
