--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,10 +1,10 @@
 <!-- app.component.html -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2"></div>
+<div class="bg-slate-600">
+  <div class="">
+    <div class=""></div>
     <!-- Fixed Left Column -->
-    <div class="col-md-4">
-      <div class="fixed-content mt-5">
+    <div class="">
+      <div class="">
         <h1>Samuel Browne</h1>
         <h3>Applications Developer</h3>
         <p>I build websites and games</p>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Scrollable Right Column -->
-    <div class="col-md-4 mt-5">
+    <div class="">
       <div class="scrollable-content">
         <p>
           I have been working for the
@@ -49,6 +49,6 @@
       </footer>
     </div>
 
-    <div class="col-md-2"></div>
+    <div class=""></div>
   </div>
 </div>
