--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,13 +1,13 @@
 <!-- app.component.html -->
-<div class="bg-slate-600">
+<div class="bg-slate-600 h-screen">
   <div class="">
     <div class=""></div>
     <!-- Fixed Left Column -->
     <div class="">
       <div class="">
-        <h1>Samuel Browne</h1>
-        <h3>Applications Developer</h3>
-        <p>I build websites and games</p>
+        <h1 class="text-cyan-100">Samuel Browne</h1>
+        <h3 class="text-cyan-200">Applications Developer</h3>
+        <p class="text-white">I build websites and games</p>
       </div>
       <nav>
         <ul>
