--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,54 +1,19 @@
 <!-- app.component.html -->
 <div class="bg-slate-600 h-screen">
-  <div class="">
-    <div class=""></div>
-    <!-- Fixed Left Column -->
-    <div class="">
-      <div class="">
+  <div class="mx-auto h-screen px-24">
+    <div class="flex h-screen">
+      <!--fixed column-->
+      <div class="flex-col justify-between py-24 h-screen w-1/2">
         <h1 class="text-cyan-100">Samuel Browne</h1>
         <h3 class="text-cyan-200">Applications Developer</h3>
         <p class="text-white">I build websites and games</p>
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a>About</a>
-          </li>
-          <li>
-            <a>Experience</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-
-    <!-- Scrollable Right Column -->
-    <div class="">
-      <div class="scrollable-content">
-        <p>
-          I have been working for the
-          <a href="https://www.icwa.wa.gov.au/"
-            >Insurance Commission of Western Australia (ICWA)</a
-          >
-          developing web applications.
-        </p>
-        <!-- Add more content to enable scrolling -->
+      <!--scrollable column-->
+      <div class="flex-col justify-between py-24 h-screen w-1/2">
+        <h1 class="text-cyan-100">Samuel Browne</h1>
+        <h3 class="text-cyan-200">Applications Developer</h3>
+        <p class="text-white">I build websites and games</p>
       </div>
-      <div>
-        <!--Previous jobs-->
-        <div>
-          <div>2021 - Present</div>
-          <div>
-            <h5>
-              Applications Developer - Insurance Commission of Western Australia
-            </h5>
-          </div>
-        </div>
-      </div>
-      <footer>
-        Designed by Samuel Browne. Built with Angular and Bootstrap
-      </footer>
     </div>
-
-    <div class=""></div>
   </div>
 </div>
