nintendo DS bios font

--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -3,10 +3,10 @@
   <div class="mx-auto h-screen px-24">
     <div class="flex h-screen">
       <!--fixed column-->
-      <div class="flex-col justify-between py-24 h-screen w-1/2">
-        <h1 class="text-cyan-100">Samuel Browne</h1>
-        <h3 class="text-cyan-200">Applications Developer</h3>
-        <p class="text-white">I build websites and games</p>
+      <div class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo">
+        <h1 class="text-cyan-100 text-4xl">Samuel Browne</h1>
+        <h3 class="text-cyan-200 text-lg">Applications Developer</h3>
+        <p class="text-gray-300">I build websites and games</p>
       </div>
       <!--scrollable column-->
       <div class="flex-col justify-between py-24 h-screen w-1/2">
