--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Nintendo DS";
+  src: url("/assets/fonts/Nintendo-DS-BIOS.ttf") format("truetype"); /* Adjust path if needed */
+  font-weight: normal;
+  font-style: normal;
+}
