--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -5,8 +5,8 @@
       <!--fixed column-->
       <div class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo">
         <h1 class="text-cyan-100 text-4xl">Samuel Browne</h1>
-        <h3 class="text-cyan-200 text-lg">Applications Developer</h3>
-        <p class="text-gray-300">I build websites and games</p>
+        <h3 class="text-cyan-200 text-3xl">Applications Developer</h3>
+        <p class="text-gray-300 text-2xl">I build websites and games</p>
       </div>
       <!--scrollable column-->
       <div class="flex-col justify-between py-24 h-screen w-1/2">
