--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -9,10 +9,15 @@
         <p class="text-gray-300 text-2xl">I build websites and games</p>
       </div>
       <!--scrollable column-->
-      <div class="flex-col justify-between py-24 h-screen w-1/2">
-        <h1 class="text-cyan-100">Samuel Browne</h1>
-        <h3 class="text-cyan-200">Applications Developer</h3>
-        <p class="text-white">I build websites and games</p>
+      <div
+        class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo text-white"
+      >
+        <p class="">
+          I have been working at the Insurance Commission of Western Australia
+          working with web applications.
+        </p>
+        <p>I enjoy learning new things</p>
+        <p>When I'm not at the computer, I'm usually driving my car</p>
       </div>
     </div>
   </div>
