--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -10,7 +10,7 @@
       </div>
       <!--scrollable column-->
       <div
-        class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo text-white"
+        class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo text-lg text-white"
       >
         <p class="">
           I have been working at the Insurance Commission of Western Australia
@@ -18,6 +18,7 @@
         </p>
         <p>I enjoy learning new things</p>
         <p>When I'm not at the computer, I'm usually driving my car</p>
+        <p>I love Nintendo DS / Nintendo Wii aesthetics :-p</p>
       </div>
     </div>
   </div>
