--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -12,13 +12,28 @@
       <div
         class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo text-lg text-white"
       >
-        <p class="">
-          I have been working at the Insurance Commission of Western Australia
-          working with web applications.
-        </p>
-        <p>I enjoy learning new things</p>
-        <p>When I'm not at the computer, I'm usually driving my car</p>
-        <p>I love Nintendo DS / Nintendo Wii aesthetics :-p</p>
+        <!--About me :-)-->
+        <div>
+          <p class="">
+            I have been working at the Insurance Commission of Western Australia
+            working with web applications.
+          </p>
+          <p>I enjoy learning new things</p>
+          <p>When I'm not at the computer, I'm usually driving my car</p>
+          <p>I love Nintendo DS / Nintendo Wii aesthetics :-p</p>
+        </div>
+        <!--Experience-->
+        <div>
+          <div class="rounded-sm bg-slate-400 h-64 flex gap-4">
+            <div class="">2021 - PRESENT</div>
+            <div>
+              <h2>Applications Developer - ICWA</h2>
+              <p>
+                I have been working at Insurance Commission of Western Australia
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
