--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -24,13 +24,23 @@
         </div>
         <!--Experience-->
         <div>
-          <div class="rounded-sm bg-slate-400 h-64 flex gap-4">
-            <div class="">2021 - PRESENT</div>
-            <div>
-              <h2>Applications Developer - ICWA</h2>
-              <p>
-                I have been working at Insurance Commission of Western Australia
-              </p>
+          <div class="rounded-sm bg-slate-400 h-64">
+            <div class="p-5 flex gap-4">
+              <div class="">2021 - PRESENT</div>
+              <div>
+                <h2>Applications Developer - ICWA</h2>
+                <p>
+                  I have been working at Insurance Commission of Western
+                  Australia making web applications.
+                </p>
+                <div class="flex gap-4">
+                  <div class="rounded-lg p-1 bg-slate-800">Angular</div>
+                  <div class="rounded-lg p-1 bg-slate-800">Typescript</div>
+
+                  <div class="rounded-lg p-1 bg-slate-800">.NET C#</div>
+                  <div class="rounded-lg p-1 bg-slate-800">HTML & CSS</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
