--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -24,7 +24,7 @@
         </div>
         <!--Experience-->
         <div>
-          <div class="rounded-sm bg-slate-400 h-64">
+          <div class="rounded-sm bg-slate-400 h-64 mt-5">
             <div class="p-5 flex gap-4">
               <div class="">2021 - PRESENT</div>
               <div>
@@ -43,6 +43,76 @@
               </div>
             </div>
           </div>
+        </div>
+        <div>View Full Resume</div>
+        <div class="mt-10">Projects I have made</div>
+        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+          <div class="p-5 flex gap-4">
+            <div class="">PROJECT 1</div>
+            <div>
+              <h2>Pokemon Web App</h2>
+              <p>
+                This is a pokemon website i made.
+                <a
+                  class="hover:text-yellow-400"
+                  href="https://pokemon-web-app-9001.web.app"
+                  >Pokemon</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+          <div class="p-5 flex gap-4">
+            <div class="">PROJECT 1</div>
+            <div>
+              <h2>Pokemon Web App</h2>
+              <p>
+                This is a pokemon website i made.
+                <a
+                  class="hover:text-yellow-400"
+                  href="https://pokemon-web-app-9001.web.app"
+                  >Pokemon</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+          <div class="p-5 flex gap-4">
+            <div class="">PROJECT 1</div>
+            <div>
+              <h2>Pokemon Web App</h2>
+              <p>
+                This is a pokemon website i made.
+                <a
+                  class="hover:text-yellow-400"
+                  href="https://pokemon-web-app-9001.web.app"
+                  >Pokemon</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+          <div class="p-5 flex gap-4">
+            <div class="">PROJECT 1</div>
+            <div>
+              <h2>Pokemon Web App</h2>
+              <p>
+                This is a pokemon website i made.
+                <a
+                  class="hover:text-yellow-400"
+                  href="https://pokemon-web-app-9001.web.app"
+                  >Pokemon</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          Made by Samuel Browne. Coded in Visual Studio Code. Built with Angular
+          and Tailwind CSS.
         </div>
       </div>
     </div>
