--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,20 +1,22 @@
 <!-- app.component.html -->
-<div class="bg-slate-600 h-screen">
+<div class="bg-slate-600 h-full overflow-y-auto">
   <div class="mx-auto h-screen px-24">
-    <div class="flex h-screen">
+    <div class="sm:flex h-screen">
       <!--fixed column-->
-      <div class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo">
+      <div
+        class="flex-col sm:flex-row justify-between sm:py-24 pt-24 sm:h-screen sm:w-1/2 font-nintendo"
+      >
         <h1 class="text-cyan-100 text-4xl">Samuel Browne</h1>
         <h3 class="text-cyan-200 text-3xl">Applications Developer</h3>
         <p class="text-gray-300 text-2xl">I build websites and games</p>
       </div>
       <!--scrollable column-->
       <div
-        class="flex-col justify-between py-24 h-screen w-1/2 font-nintendo text-lg text-white"
+        class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-white"
       >
         <!--About me :-)-->
-        <div>
-          <p class="">
+        <div class="flex-col">
+          <p>
             I have been working at the Insurance Commission of Western Australia
             working with web applications.
           </p>
