--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -12,7 +12,7 @@
       </div>
       <!--scrollable column-->
       <div
-        class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-white overflow-y-auto"
+        class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-white sm:overflow-y-auto"
       >
         <!--About me :-)-->
         <div class="flex-col">
