--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- app.component.html -->
-<div class="bg-slate-600 h-full">
+<div class="bg-slate-600 h-full overflow-y-auto">
   <div class="mx-auto h-screen px-24">
     <div class="sm:flex h-screen">
       <!--fixed column-->
@@ -12,7 +12,7 @@
       </div>
       <!--scrollable column-->
       <div
-        class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-white sm:overflow-y-auto"
+        class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-white sm:overflow-y-auto hide-scrollbar"
       >
         <!--About me :-)-->
         <div class="flex-col">
