--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -30,7 +30,11 @@
             <div class="p-5 flex gap-4">
               <div class="">2021 - PRESENT</div>
               <div>
-                <h2>Applications Developer - ICWA</h2>
+                <h2>
+                  <a class="hover:text-yellow-400">
+                    Applications Developer - ICWA
+                  </a>
+                </h2>
                 <p>
                   I have been working at Insurance Commission of Western
                   Australia making web applications.
