--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -26,12 +26,15 @@
         </div>
         <!--Experience-->
         <div>
-          <div class="rounded-sm bg-slate-400 h-64 mt-5">
+          <div class="bg-slate-400 h-64 mt-5">
             <div class="p-5 flex gap-4">
               <div class="">2021 - PRESENT</div>
               <div>
                 <h2>
-                  <a class="hover:text-yellow-400">
+                  <a
+                    class="hover:text-yellow-400"
+                    href="https://www.icwa.wa.gov.au/"
+                  >
                     Applications Developer - ICWA
                   </a>
                 </h2>
@@ -52,7 +55,7 @@
         </div>
         <div>View Full Resume</div>
         <div class="mt-10">Projects I have made</div>
-        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -68,7 +71,7 @@
             </div>
           </div>
         </div>
-        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -84,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -100,7 +103,7 @@
             </div>
           </div>
         </div>
-        <div class="rounded-sm bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
