--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -26,8 +26,8 @@
         </div>
         <!--Experience-->
         <div>
-          <div class="bg-slate-400 h-64 mt-5">
-            <div class="p-5 flex gap-4">
+          <div class="bg-slate-400 h-64 mt-5 border-2 border-black">
+            <div class="p-5 flex flex-wrap gap-4">
               <div class="">2021 - PRESENT</div>
               <div>
                 <h2>
@@ -42,7 +42,7 @@
                   I have been working at Insurance Commission of Western
                   Australia making web applications.
                 </p>
-                <div class="flex gap-4">
+                <div class="flex flex-wrap gap-4">
                   <div class="rounded-lg p-1 bg-slate-800">Angular</div>
                   <div class="rounded-lg p-1 bg-slate-800">Typescript</div>
 
@@ -55,7 +55,7 @@
         </div>
         <div>View Full Resume</div>
         <div class="mt-10">Projects I have made</div>
-        <div class="bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -71,7 +71,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -87,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
@@ -103,7 +103,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-slate-400 h-32 mt-5">
+        <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
             <div>
