--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -1,13 +1,13 @@
 <!-- app.component.html -->
-<div class="bg-slate-600 h-full overflow-y-auto">
-  <div class="mx-auto h-screen px-24">
+<div class="bg-[#0f172a] h-full overflow-y-auto">
+  <div class="mx-auto h-screen sm:px-24 px-6">
     <div class="sm:flex h-screen">
       <!--fixed column-->
       <div
-        class="flex-col sm:flex-row justify-between sm:py-24 pt-24 sm:h-screen sm:w-1/2 font-nintendo"
+        class="flex-col sm:flex-row justify-between sm:py-24 py-12 sm:h-screen sm:w-1/2 font-nintendo sm:mb-0 mb-5"
       >
-        <h1 class="text-cyan-100 text-4xl">Samuel Browne</h1>
-        <h3 class="text-cyan-200 text-3xl">Applications Developer</h3>
+        <h1 class="text-[#ecf0f1] text-4xl">Samuel Browne</h1>
+        <h3 class="text-[#a2a2a2] text-3xl">Applications Developer</h3>
         <p class="text-gray-300 text-2xl">I build websites and games</p>
       </div>
       <!--scrollable column-->
