--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -7,7 +7,7 @@
         class="flex-col sm:flex-row justify-between sm:py-24 py-12 sm:h-screen sm:w-1/2 font-nintendo sm:mb-0 mb-5"
       >
         <h1 class="text-[#ecf0f1] text-4xl">Samuel Browne</h1>
-        <h3 class="text-[#a2a2a2] text-3xl">Applications Developer</h3>
+        <h3 class="text-[#7bacdd] text-3xl">Applications Developer</h3>
         <p class="text-gray-300 text-2xl">I build websites and games</p>
       </div>
       <!--scrollable column-->
