--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -119,9 +119,13 @@
             </div>
           </div>
         </div>
-        <div>
-          Made by Samuel Browne. Coded in Visual Studio Code. Built with Angular
-          and Tailwind CSS.
+        <div class="pb-16 text-slate-400">
+          Made by Samuel Browne. Coded in
+          <a
+            href="https://code.visualstudio.com/"
+            class="font-medium hover:text-teal-300"
+            >Visual Studio Code</a
+          >. Built with Angular and Tailwind CSS.
         </div>
       </div>
     </div>
