--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -26,8 +26,8 @@
         </div>
         <!--Experience-->
         <div>
-          <div class="bg-slate-400 h-64 mt-5 border-2 border-black">
-            <div class="p-5 flex flex-wrap gap-4">
+          <div class="bg-slate-400 h-92 mt-5 border-2 border-black">
+            <div class="p-5 flex gap-4">
               <div class="">2021 - PRESENT</div>
               <div>
                 <h2>
