--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -21,14 +21,12 @@
             working with web applications.
           </p>
           <p>I enjoy learning new things</p>
-          <p>When I'm not at the computer, I'm usually driving my car</p>
-          <p>I love Nintendo DS / Nintendo Wii aesthetics :-p</p>
         </div>
         <!--Experience-->
         <div>
           <div class="bg-slate-400 h-92 mt-5 border-2 border-black">
             <div class="p-5 flex gap-4">
-              <div class="">2021 - PRESENT</div>
+              <div class="sm:w-46 w-32">2021 - PRESENT</div>
               <div>
                 <h2>
                   <a
@@ -125,7 +123,12 @@
             href="https://code.visualstudio.com/"
             class="font-medium hover:text-teal-300"
             >Visual Studio Code</a
-          >. Built with Angular and Tailwind CSS.
+          >. Built with
+          <a href="https://angular.dev/" class="hover:text-teal-300">Angular</a>
+          and
+          <a href="https://tailwindcss.com/" class="hover:text-teal-300"
+            >Tailwind CSS</a
+          >.
         </div>
       </div>
     </div>
