--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -15,6 +15,9 @@
         class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-[#ecf0f1] sm:overflow-y-auto hide-scrollbar"
       >
         <!--About me :-)-->
+        <div class="sticky top-0 backdrop-blur bg-[#0f172a]">
+          <p>About</p>
+        </div>
         <div class="flex-col">
           <p>
             I have been working at the Insurance Commission of Western Australia
@@ -23,8 +26,13 @@
           <p>I enjoy learning new things</p>
         </div>
         <!--Experience-->
+        <div class="sticky top-0 backdrop-blur bg-[#0f172a]">
+          <p>Experience</p>
+        </div>
         <div>
-          <div class="bg-slate-400 h-92 mt-5 border-2 border-black">
+          <div
+            class="bg-slate-400 h-92 mt-5 border-2 border-black text-[#162e38]"
+          >
             <div class="p-5 flex gap-4">
               <div class="sm:w-46 w-32">2021 - PRESENT</div>
               <div>
@@ -40,7 +48,7 @@
                   I have been working at Insurance Commission of Western
                   Australia making web applications.
                 </p>
-                <div class="flex flex-wrap gap-4">
+                <div class="flex flex-wrap gap-4 text-white">
                   <div class="rounded-lg p-1 bg-slate-800">Angular</div>
                   <div class="rounded-lg p-1 bg-slate-800">Typescript</div>
 
@@ -52,7 +60,9 @@
           </div>
         </div>
         <div>View Full Resume</div>
-        <div class="mt-10">Projects I have made</div>
+        <div class="mt-10 sticky top-0 backdrop-blur bg-[#0f172a]">
+          <p>Projects</p>
+        </div>
         <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
           <div class="p-5 flex gap-4">
             <div class="">PROJECT 1</div>
