--- a/src/modules/core/home/home.component.html
+++ b/src/modules/core/home/home.component.html
@@ -15,10 +15,10 @@
         class="flex-col sm:flex-row justify-between sm:py-24 sm:h-screen sm:w-1/2 font-nintendo text-lg text-[#ecf0f1] sm:overflow-y-auto hide-scrollbar"
       >
         <!--About me :-)-->
-        <div class="sticky top-0 backdrop-blur bg-[#0f172a]">
+        <div class="sm:relative sticky top-0 backdrop-blur bg-[#0f172a]">
           <p>About</p>
         </div>
-        <div class="flex-col">
+        <div class="flex-col mb-16">
           <p>
             I have been working at the Insurance Commission of Western Australia
             working with web applications.
@@ -26,16 +26,16 @@
           <p>I enjoy learning new things</p>
         </div>
         <!--Experience-->
-        <div class="sticky top-0 backdrop-blur bg-[#0f172a]">
+        <div class="sm:relative sticky top-0 backdrop-blur bg-[#0f172a]">
           <p>Experience</p>
         </div>
         <div>
           <div
             class="bg-slate-400 h-92 mt-5 border-2 border-black text-[#162e38]"
           >
-            <div class="p-5 flex gap-4">
-              <div class="sm:w-46 w-32">2021 - PRESENT</div>
-              <div>
+            <div class="p-5 gap-4 sm:grid sm:grid-cols-2">
+              <div class="sm:w-46 w-32 sm:col-span-2">2021 - PRESENT</div>
+              <div class="sm:col-span-6">
                 <h2>
                   <a
                     class="hover:text-yellow-400"
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div>View Full Resume</div>
-        <div class="mt-10 sticky top-0 backdrop-blur bg-[#0f172a]">
+        <div class="mt-10 sm:relative sticky top-0 backdrop-blur bg-[#0f172a]">
           <p>Projects</p>
         </div>
         <div class="bg-slate-400 h-32 mt-5 border-2 border-black">
